src/editor.scss
.formo-contact-form-switcher-title {
  background-color: var(--wp--preset--color--formo-blue);
  color: var(--wp--preset--color--white);
  padding: 1em;
  margin-bottom: 0;
  border-radius: 5px 5px 0 0;
}

.formo-contact-form-switcher-forms {
  padding: 1em;
  background-color: #EEE;
  
  & > .block-editor-inner-blocks > .block-editor-block-list__layout{
    display: flex;
    gap: 1em;
    flex-wrap: nowrap;
    overflow-x: scroll;

    & .formo-contact-form {
      flex: 0 0 90%;
      display: block;

      & .components-combobox-control__input {
        padding: 0;
        border: none;
      }
    }
  }
}

